# DicStructureCreater

./: .gitignore  README.md  init_test_ds.txt  update_test_ds.txt
docs/: README_zh_TW.md
dsc/: Cargo.toml  README.md
dsc/src/: main.rs
